bp-server/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bp-server
  namespace: prod-sc
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bp-server
  template:
    metadata:
      labels:
        app: bp-server
    spec:
      containers:
        - name: bp-server
          image: cthadeu/bpserver:0.7.5 # Substitua pela imagem correta
          ports:
            - containerPort: 8090
              protocol: TCP
      imagePullSecrets:
        - name: cthadeu-dockerhub
---
apiVersion: v1
kind: Service
metadata:
  name: bp-server-service
  namespace: prod-sc
spec:
  selector:
    app: bp-server
  ports:
    - protocol: TCP
      port: 8090 # Porta exposta pelo serviço
      targetPort: 8090 # Porta do container
  type: LoadBalancer # Pode ser LoadBalancer ou NodePort, dependendo do seu cluster
